Add io_uring support (experimental)
and also rework native ns not to use eval