@@ -7,13 +7,13 @@
                  [org.clojure/tools.logging "1.1.0"
                   :exclusions [org.clojure/clojure]]
                  [potemkin "0.4.5"]
-                 [io.netty/netty-common "4.1.63.Final"]
-                 [io.netty/netty-buffer "4.1.63.Final"]
-                 [io.netty/netty-transport "4.1.63.Final"]
-                 [io.netty/netty-codec "4.1.63.Final"]
-                 [io.netty/netty-handler "4.1.63.Final"]
-                 [io.netty/netty-codec-http "4.1.63.Final"]
-                 [io.netty/netty-codec-http2 "4.1.63.Final"]]
+                 [io.netty/netty-common "4.1.58.Final"]
+                 [io.netty/netty-buffer "4.1.58.Final"]
+                 [io.netty/netty-transport "4.1.58.Final"]
+                 [io.netty/netty-codec "4.1.58.Final"]
+                 [io.netty/netty-handler "4.1.58.Final"]
+                 [io.netty/netty-codec-http "4.1.58.Final"]
+                 [io.netty/netty-codec-http2 "4.1.58.Final"]]
 
   :jvm-opts ["-Dclojure.compiler.direct-linking=true"]
 
@@ -33,19 +33,20 @@
                     "-XX:+UseNUMA"
                     "-XX:MaxNewSize=100m"
                     "-XX:+UseG1GC"
-                    "-XX:+AggressiveOpts"
                     "-Dvertx.disableMetrics=true"
                     "-Dvertx.threadChecks=false"
                     "-Dvertx.disableContextTimings=true"
                     "-Dvertx.disableTCCL=true"
                     "-Djdk.attach.allowAttachSelf"]
                    :global-vars
-                    {*warn-on-reflection* true
-                     *unchecked-math* :warn-on-boxed}
+                   {*warn-on-reflection* true
+                    *unchecked-math* :warn-on-boxed}
                    :dependencies
                    [[org.clojure/test.check "1.1.0"]
                     [org.clojure/tools.namespace "1.1.0"]
-                    [io.netty/netty-transport-native-epoll "4.1.63.Final"
+                    [io.netty.incubator/netty-incubator-transport-native-io_uring "0.0.3.Final"
+                     :classifier "linux-x86_64"]
+                    [io.netty/netty-transport-native-epoll "4.1.58.Final"
                      :classifier "linux-x86_64"]
                     [mount "0.1.16"]
                     [metosin/jsonista "0.3.2"]
